# ConsoleX

./: .gitignore  CMakeLists.txt  ErrorHandling.h  ErrorHandling.hpp  Functions.h  Functions.hpp  InternalErrorHandling.cpp  InternalErrorHandling.hpp  README.MD  TYPES.cpp  TYPES.h  TYPES.hpp  ansicolor.hpp  main.cpp  test.xml
